site/src/content/docs/docs/v0.5/installation.mdx
---
slug: docs/v0.5/installation
title: Installation
description: Prepare a Marivo project for an agent and choose a datasource backend.
---

Marivo requires Python 3.10 or newer.

## Choose an installation path

Choose one path. Use the installer for the shortest setup; use manual
installation when the project must control its Python environment and
datasource dependencies.

### Option 1: Use the installer

Enter the directory that will contain the Marivo project, then run:

```bash
curl -fsSL https://marivo.io/install.sh | bash
```

The installer first ensures `uv`, uses it to install a managed Python 3.10 and create
or reuse `.venv`, installs `marivo[duckdb,trino,clickhouse]`, and runs `marivo init` in the current
directory. It supports macOS, Linux, WSL, and Windows through Git Bash, MSYS2, or
Cygwin. MySQL is intentionally not part of the default install; add `marivo[mysql]`
manually after installing its native client prerequisites. On Windows, PowerShell is
needed only when the installer must install `uv`.
Continue directly to
[Verify the installation](#verify-the-installation);
do not also follow the manual steps below.

### Option 2: Install manually

To control the environment and datasource backends, complete these steps in
order.

1. Use `uv` to create a Python 3.10 or newer virtual environment:

```bash
uv venv --python 3.10 --seed
source .venv/bin/activate
```

On Windows Bash shells, activate it with `source .venv/Scripts/activate`.

2. Install the extra for the datasource backend the project will use:

| Backend | Install command |
| --- | --- |
| DuckDB | `uv pip install "marivo[duckdb]"` |
| SQLite | `uv pip install "marivo[sqlite]"` |
| MySQL | `uv pip install "marivo[mysql]"` |
| Postgres | `uv pip install "marivo[postgres]"` |
| ClickHouse | `uv pip install "marivo[clickhouse]"` |
| Trino | `uv pip install "marivo[trino]"` |
| All packaged backends | `uv pip install "marivo[all]"` |

3. Verify the installed version:

```bash
marivo --version
```

4. Initialize the current project directory once:

```bash
marivo init
```

When the current working directory is not the project root, use
`marivo init --project-root <project-directory>`.

Run `marivo init` separately only for manual installation.

`marivo init` is idempotent: it leaves existing files untouched and reports them as
skipped, so it is safe to re-run after an upgrade. Re-running adds only what is
missing. Use `marivo init --force` to delete the generated artifacts and recreate
them from scratch.

:::note
`init` refuses to silently skip a `marivo.toml` that contains invalid TOML. Fix or
remove it, or pass `--force`. Skill links are best-effort symlinks: if the platform
cannot create a symlink, `init` prints a warning and continues.
:::

## What the agent can use

| Path | Purpose |
| --- | --- |
| `marivo.toml` | Project manifest. The project name defaults to the directory name; local telemetry defaults to `enabled = "on"`. |
| `models/` | Datasource and semantic declarations. |
| `.marivo/` | Project-local sessions, evidence, and cached metadata. |
| `.agents/skills/` | Links to the `marivo-semantic` and `marivo-analysis` skills for compatible agents. |
| `.claude/skills/` | Links to the same skills for Claude Code. |
| `.codex/skills/` | Links to the same skills for Codex. |

```text
your-project/
  marivo.toml
  models/
  .marivo/
  .agents/skills/
  .claude/skills/
  .codex/skills/
```

## Verify the installation

After initialization, give the agent this bounded preparation request:

> Check whether this Marivo project is initialized correctly and tell me what
> is missing before I use its existing semantic layer or create a new one.
> For credentials, check only environment-variable names and configuration
> status. Do not request, display, or commit credential values.

This separates project setup from access to business data and from decisions about
business meaning.

When an agent is launched by another runtime, prefer the project interpreter selected by
that runtime. For a conventional project-local installation, prefer `.venv/bin/python` on
macOS, Linux, and WSL, or `.venv/Scripts/python.exe` on Windows. Use the selected
interpreter to run `<selected-python> -m marivo doctor` and for subsequent help and
execution.

## What to review before continuing

Before choosing a project path, confirm that:

- `marivo.toml`, `models/`, and `.marivo/` are present;
- the expected skill paths under `.agents/skills/`, `.claude/skills/`, and
  `.codex/skills/` are present, or the initialization warning explains why a symlink
  could not be created;
- the required datasource backend extra is installed; and
- credentials are supplied through approved environment-backed fields, not committed
  as plaintext in project files.

When those checks pass, continue to [Quick Start](/docs/v0.5/quick-start/) and
choose whether to reuse an existing semantic layer or create one. After the
selected project path is ready and its business meaning is approved, continue
to the [first analysis](/docs/latest/first-analysis/).

A project with existing `models/datasources/` declarations but no local
`models/semantic/` directory is a normal starting point. Doctor reports this as
an informational `semantic modeling is pending` note rather than a setup
warning; actual manifest, layer-path, backend, and credential problems remain
diagnostic failures or warnings.
